[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "review-request"
version = "0.1.6"
description = "Slack and GitHub integration for automating code review requests"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "King Kong" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "slack-sdk",
    "python-dotenv",
    "validators",
    "aiohttp",
    "pydantic",
    "cachetools",
    "pytz",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
pr-reminder = "review_request.scripts.pr_reminder:run"
jira-overdue-reminder = "review_request.scripts.jira_overdue_reminder:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers --cov=review_request --cov-report=term-missing"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
